<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:fontFamily="serif"
        android:text="@string/register"
        android:textSize="40sp"
        android:textColor="@color/colorAccent">
    </TextView>



    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center">
        <EditText
            android:layout_width="wrap_content"
            android:id="@+id/rname"
            android:layout_height="wrap_content"
            android:ems="12"
            android:textColor="@color/colorAccent"
            android:inputType="text"
            android:background="@drawable/edittext"
            android:hint="@string/name"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center">
        <EditText
            android:layout_width="wrap_content"
            android:id="@+id/rmail"
            android:textColor="@color/colorAccent"
            android:layout_height="wrap_content"
            android:ems="12"
            android:inputType="textEmailAddress"
            android:background="@drawable/edittext"
            android:hint="@string/email"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_gravity="center">
        <EditText
            android:layout_width="wrap_content"
            android:id="@+id/rpass"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:ems="12"
            android:hint="@string/set_password"
            android:inputType="textPassword"
            android:background="@drawable/edittext" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:layout_gravity="center">
        <EditText
            android:layout_width="wrap_content"
            android:id="@+id/rrpass"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:ems="12"
            android:hint="@string/retype_password"
            android:inputType="textPassword"
            android:background="@drawable/edittext" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv1"
            android:textSize="20sp"
            android:textColor="#f44336"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAllCaps="false"
        android:fontFamily="serif"
        android:theme="@style/MyButton"
        android:textSize="20sp"
        android:text="@string/register"
        android:textColor="@color/colorPrimary"
        android:id="@+id/register"/>

</LinearLayout>